avoid layout shifts in very long titles

--- a/ngapp/src/app/student-components/dashboard/dashboard.component.css
+++ b/ngapp/src/app/student-components/dashboard/dashboard.component.css
@@ -1,3 +1,11 @@
+h1 {
+  white-space: nowrap;
+  overflow-x: none;
+  overflow-y: auto;
+  margin: auto;
+  padding: 2px;
+}
+
 .synthesisLoading {
   align: center;
   border-right: 2px solid orange;
@@ -176,7 +184,6 @@
 
 .bookHeader {
   display: flex;
-  margin-top: -2.5em;
   flex-direction: column;
   padding: 15px;
   padding-bottom: 5px;
